# distrust

./: LICENSE
distrust/: Cargo.toml
distrust/src/: bot.rs  error.rs  lib.rs
distrust/src/gateway/: events.rs  mod.rs  shards.rs
distrust/src/types/: applications.rs  channels.rs  guilds.rs  messages.rs  mod.rs  users.rs
distrust_restructure/: Cargo.toml  LICENSE
distrust_restructure/discord_rest/: Cargo.toml
distrust_restructure/discord_rest/src/: errors.rs  lib.rs
distrust_restructure/gateway/: Cargo.toml
distrust_restructure/gateway/src/: error.rs  lib.rs
distrust_restructure/gateway/src/presence/: mod.rs
distrust_restructure/gateway/src/sharding/: shards.rs
distrust_restructure/src/: error.rs  lib.rs
distrust_restructure/src/commands/: arguments.rs  builder.rs  mod.rs
distrust_restructure/typing/: Cargo.toml
distrust_restructure/typing/src/: actors.rs  application.rs  lib.rs  messages.rs  places.rs  snowflakes.rs
