[package]
name = "distrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]


[dependencies]
typing = { path = "typing" }
gateway = { path = "gateway" }
discord_rest = { path = "discord_rest" }
serde = "*"
