[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
typing = { path = "../typing" }
discord_rest = { path = "../discord_rest" }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
chrono = { version = "*", features = ["serde"] }
websockets = { version = "*" }
tokio = { version = "*", features = ["full"] }
